Update 'esb77c2rk-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:3ea009f4a41eb54952a2ca955f8f6e7b0882482b@sha256:110eaba028d5cec24ffb0ea297e7350053d8dc040699e6cb1ac0afb7e991aa25

--- a/components/esb77c2rk-python/overlays/development/deployment-patch.yaml
+++ b/components/esb77c2rk-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: esb77c2rk-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:3ea009f4a41eb54952a2ca955f8f6e7b0882482b@sha256:110eaba028d5cec24ffb0ea297e7350053d8dc040699e6cb1ac0afb7e991aa25
+          name: container-image
